[gd_scene load_steps=21 format=3 uid="uid://bmn6f7lw5bue7"]

[ext_resource type="PackedScene" uid="uid://dwgqx5pietri" path="res://models/map/menuTSCN/grassyBot.fbx" id="1_wut1r"]
[ext_resource type="Texture2D" uid="uid://gr0rir7bxaxq" path="res://textures/sky/pexels-aadil-5417957.jpg" id="2_83s16"]
[ext_resource type="Script" uid="uid://caqserwoy1gll" path="res://scripts/buttons/menu/onPlay.gd" id="3_w7d22"]
[ext_resource type="Script" uid="uid://cv3rt5rr2ud1a" path="res://scripts/buttons/menu/options_button.gd" id="4_c3jr6"]
[ext_resource type="Texture2D" uid="uid://cdcvaytqoyx5o" path="res://textures/textTextures/gayName.png" id="4_wc2lj"]
[ext_resource type="Script" uid="uid://bn6qku3uso0tx" path="res://volumeScript.gd" id="4_wked4"]
[ext_resource type="LabelSettings" uid="uid://3l7r8fnrrw54" path="res://textures/textTextures/mainMenu.tres" id="5_hvu0j"]
[ext_resource type="AudioStream" uid="uid://3c3sy7mnslug" path="res://audio/bgm/calming-rain-257596.mp3" id="8_0ei6b"]
[ext_resource type="AudioStream" uid="uid://1v58gc0eybyq" path="res://audio/bgm/dinkyl.wav" id="9_rdsan"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_w7d22"]
panorama = ExtResource("2_83s16")

[sub_resource type="Sky" id="Sky_rdsan"]
sky_material = SubResource("PanoramaSkyMaterial_w7d22")

[sub_resource type="Environment" id="Environment_wut1r"]
background_mode = 2
sky = SubResource("Sky_rdsan")
fog_enabled = true
fog_light_energy = 0.14
fog_sky_affect = 0.275
volumetric_fog_enabled = true

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_83s16"]
lifetime_randomness = 0.05
emission_shape_scale = Vector3(2.505, 2.425, 1.885)
emission_shape = 3
emission_box_extents = Vector3(1.575, 1.21, 1.93)
direction = Vector3(-1.08, 0, 0)
spread = 68.258
angular_velocity_min = -97.01002
angular_velocity_max = -75.16001
gravity = Vector3(0, -78.635, 0)
collision_mode = 1
collision_friction = 0.0
collision_bounce = 0.0

[sub_resource type="Curve" id="Curve_w7d22"]
_limits = [0.0, 0.14567363, 0.0, 1.0]
_data = [Vector2(0.027932964, 0), 0.0, 0.0, 0, 0, Vector2(0.3379888, 0.110076666), 0.0, 0.0, 0, 0, Vector2(0.7150838, 0.14567363), 0.0, 0.0, 0, 0, Vector2(0.896648, 0.1243155), 0.0, 0.0, 0, 0, Vector2(0.98882675, 0), 0.0, 0.0, 0, 0]
point_count = 5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wc2lj"]
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(1.1130236e-07, 0.09329008, 0.13120273, 1)

[sub_resource type="RibbonTrailMesh" id="RibbonTrailMesh_wked4"]
material = SubResource("StandardMaterial3D_wc2lj")
size = 0.1
curve = SubResource("Curve_w7d22")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_83s16"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 16
border_width_bottom = 16
border_color = Color(0.3075619, 2.9480086e-07, 1.5642495e-07, 1)
border_blend = true
corner_detail = 1
shadow_size = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w7d22"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 16
border_width_bottom = 16
border_color = Color(0, 0, 0, 1)
shadow_size = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wc2lj"]
bg_color = Color(0.4487638, 0.04063718, 0.06645635, 1)
border_width_left = 16
border_width_bottom = 16
border_color = Color(0.30588236, 0, 0, 1)
border_blend = true
corner_detail = 1
shadow_size = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c3jr6"]
bg_color = Color(0, 0, 0, 1)
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 0, 0, 1)
border_blend = true
corner_radius_top_left = 1
shadow_size = 6

[node name="Node3D" type="Node3D"]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.9826063, 0.18570091, 0, -0.18570091, 0.9826063, -2.3841858e-07, 1.1368625, 1.4770586)
current = true
fov = 52.5

[node name="grassyBot" parent="." instance=ExtResource("1_wut1r")]
transform = Transform3D(2.7586503, 0, 0, 0, 1, 0, 0, 0, 1.5338204, 2.4118114, -1.2360305, -16.933685)

[node name="Environment" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.4118114, 0.22303164, -12.622474)
light_color = Color(0, 0, 0, 1)

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_wut1r")

[node name="GPUParticles3D" type="GPUParticles3D" parent="Environment"]
amount = 343
trail_lifetime = 0.01
process_material = SubResource("ParticleProcessMaterial_83s16")
draw_pass_1 = SubResource("RibbonTrailMesh_wked4")

[node name="mainMenu" type="Control" parent="."]
z_index = 69
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="playButton" type="Button" parent="mainMenu"]
z_index = 100
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 101.0
offset_top = -173.0
offset_right = 257.0
offset_bottom = -109.0
grow_vertical = 2
theme_override_colors/font_color = Color(0.8745098, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_83s16")
theme_override_styles/pressed = SubResource("StyleBoxFlat_w7d22")
theme_override_styles/hover = SubResource("StyleBoxFlat_wc2lj")
text = "PLAY"
script = ExtResource("3_w7d22")

[node name="optionsButton" type="Button" parent="mainMenu"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 101.0
offset_top = -90.0
offset_right = 257.0
offset_bottom = -26.0
grow_vertical = 2
theme_override_colors/font_color = Color(0.8745098, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_83s16")
theme_override_styles/pressed = SubResource("StyleBoxFlat_w7d22")
theme_override_styles/hover = SubResource("StyleBoxFlat_wc2lj")
text = "OPTIONS"
script = ExtResource("4_c3jr6")

[node name="Panel" type="Panel" parent="mainMenu/optionsButton"]
visible = false
layout_mode = 0
offset_left = 421.0
offset_top = -87.0
offset_right = 461.0
offset_bottom = -47.0
scale = Vector2(9.440001, 7.4211955)
theme_override_styles/panel = SubResource("StyleBoxFlat_c3jr6")

[node name="Label" type="Label" parent="mainMenu/optionsButton/Panel"]
layout_mode = 0
offset_left = 0.95338976
offset_top = 2.6949835
offset_right = 58.95339
offset_bottom = 25.694984
scale = Vector2(0.19974326, 0.24390042)
text = "SFX"
label_settings = ExtResource("5_hvu0j")
script = ExtResource("4_wked4")

[node name="HSlider" type="HSlider" parent="mainMenu/optionsButton/Panel/Label"]
layout_mode = 0
offset_left = 2.651709
offset_top = 25.413906
offset_right = 173.95209
offset_bottom = 41.413906
max_value = 1.5
step = 0.001
value = 0.75

[node name="Label2" type="Label" parent="mainMenu/optionsButton/Panel"]
layout_mode = 0
offset_left = 1.2711864
offset_top = 13.070671
offset_right = 118.27119
offset_bottom = 36.07067
scale = Vector2(0.19974326, 0.24390042)
text = "Music"
label_settings = ExtResource("5_hvu0j")
script = ExtResource("4_wked4")

[node name="musicSlider" type="HSlider" parent="mainMenu/optionsButton/Panel/Label2"]
layout_mode = 0
offset_left = 2.651709
offset_top = 25.413906
offset_right = 173.95209
offset_bottom = 41.413906
max_value = 1.5
step = 0.001
value = 0.75

[node name="Label3" type="Label" parent="mainMenu/optionsButton/Panel"]
layout_mode = 0
offset_left = 1.2711864
offset_top = 22.772614
offset_right = 118.27119
offset_bottom = 45.772614
scale = Vector2(0.19974326, 0.24390042)
text = "Dialogue"
label_settings = ExtResource("5_hvu0j")
script = ExtResource("4_wked4")

[node name="talkSlider" type="HSlider" parent="mainMenu/optionsButton/Panel/Label3"]
layout_mode = 0
offset_left = 2.651709
offset_top = 25.413906
offset_right = 173.95209
offset_bottom = 41.413906
max_value = 1.5
step = 0.001
value = 0.75

[node name="quitButton" type="Button" parent="mainMenu"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 101.0
offset_top = -7.0
offset_right = 257.0
offset_bottom = 57.0
grow_vertical = 2
theme_override_colors/font_color = Color(0.8745098, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_83s16")
theme_override_styles/pressed = SubResource("StyleBoxFlat_w7d22")
theme_override_styles/hover = SubResource("StyleBoxFlat_wc2lj")
text = "QUIT"
script = ExtResource("3_w7d22")

[node name="GayName" type="Sprite2D" parent="."]
position = Vector2(283.25, 147.99998)
rotation = -0.07677027
scale = Vector2(0.72049993, 0.3893333)
texture = ExtResource("4_wc2lj")

[node name="RainBG" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("8_0ei6b")
volume_db = -5.6
autoplay = true
bus = &"SFX"

[node name="musicBG" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("9_rdsan")
volume_db = -5.6
autoplay = true
bus = &"Music"

[connection signal="pressed" from="mainMenu/playButton" to="mainMenu/playButton" method="_on_pressed"]
[connection signal="pressed" from="mainMenu/optionsButton" to="mainMenu/optionsButton" method="_on_pressed"]
[connection signal="value_changed" from="mainMenu/optionsButton/Panel/Label/HSlider" to="mainMenu/optionsButton/Panel/Label" method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="mainMenu/optionsButton/Panel/Label2/musicSlider" to="mainMenu/optionsButton/Panel/Label2" method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="mainMenu/optionsButton/Panel/Label3/talkSlider" to="mainMenu/optionsButton/Panel/Label3" method="_on_talk_slider_value_changed"]
[connection signal="pressed" from="mainMenu/quitButton" to="mainMenu/playButton" method="_on_quit_button_pressed"]
